--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,3 @@
-body{
-  width: 50vw;
-  margin:0 auto;
-}
-
-header{
-  margin: 15px auto;
-}
-
 .sub_header_title {
     text-align: center;
     margin-left: -200px;
@@ -21,13 +12,13 @@ header{
 .top_wrapper {
     height: 200px;
     width: 100%;
-    background-image: url(../img/backgound_flower3.jpg);
+    background-image: url(../public/backgound_flower3.jpg);
     position: relative;
     margin-bottom: 50px;
 }
 
 .yui_img{
-  background-image: url(../img/icon_yui.jpg);
+  background-image: url(../public/icon_yui.jpg);
   width: 100px;
   height: 130px;
   position: absolute;
