--- a/styles/main.css
+++ b/styles/main.css
@@ -66,7 +66,8 @@ ul.stage_list_name {
 }
 
 .m{
-  padding:5px;
+  list-style: disc;
+  padding-bottom: 15px;
 }
 /* モバイル版 */
 @media (max-width: 1024px){
