--- a/styles/main.css
+++ b/styles/main.css
@@ -69,6 +69,9 @@ ul.stage_list_name {
   list-style: disc;
   padding-bottom: 15px;
 }
+.list{
+  padding-left: 1rem;
+}
 /* モバイル版 */
 @media (max-width: 1024px){
   .top_wrapper {
